--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "leaflet": "^1.5.1",
+    "leaflet-geosearch": "^2.7.0",
     "mysql": "^2.17.1",
     "vue": "^2.6.10",
     "vue2-leaflet": "^2.2.1",
+    "vue2-leaflet-geosearch": "^1.0.6",
     "vuetify": "^2.0.0"
   },
   "devDependencies": {
