--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "core-js": "^2.6.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "leaflet": "^1.5.1",
     "leaflet-geosearch": "^2.7.0",
+    "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "vue": "^2.6.10",
     "vue2-leaflet": "^2.2.1",
