--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "core-js": "^2.6.5",
     "cors": "^2.8.5",
@@ -17,6 +18,7 @@
     "leaflet-geosearch": "^2.7.0",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
+    "nodemon": "^1.19.4",
     "vue": "^2.6.10",
     "vue2-leaflet": "^2.2.1",
     "vue2-leaflet-geosearch": "^1.0.6",
