--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql": "^2.17.1",
     "nodemon": "^1.19.4",
     "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
     "vue2-leaflet": "^2.2.1",
     "vue2-leaflet-geosearch": "^1.0.6",
     "vuetify": "^2.0.0"
