--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^1.19.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-session": "^1.0.0",
     "vue2-leaflet": "^2.2.1",
     "vue2-leaflet-geosearch": "^1.0.6",
     "vuetify": "^2.0.0"
