--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.1.3",
     "vue-session": "^1.0.0",
     "vue2-leaflet": "^2.2.1",
